flight mode endpoints
