# api_spec.yml
@@ -1,7 +1,7 @@
 openapi: 3.0.2
 info:
   title: MissionPlanner Scripts
-  version: 1.3.1
+  version: 1.4.0
   description: "This is the API that the MissionPlanner Scripts server exposes to GCOM."
   contact:
     name: Amin Fahiminia, Hansen Dan
@@ -18,8 +18,8 @@ tags:
     description: Take off after motors are armed
   - name: landing
     description: Landing, RTL, and setting Home
-  - name: fence
-    description: Inclusion/Exclusion fences
+  - name: options
+    description: Configure flight options
 paths:
   /queue:
     get:
@@ -198,7 +198,7 @@ paths:
   /vtol/transition: 
     get:
       tags:
-        - takeoff
+        - options
       summary: return whether the aircraft is in VTOL or fixed wing mode
       description: >-
         Returns the current flight mode of the aircraft. The values 
@@ -217,7 +217,7 @@ paths:
                     type: integer
     post:
       tags:
-        - takeoff
+        - options
       summary: change the aircraft's flight mode
       description: >-
         Change the aircraft's flight mode. The mode to change to is 
@@ -264,6 +264,47 @@ paths:
       responses:
         "200":
           description: Diversion processed
+  /flightmode:
+    put:
+      tags:
+        - options
+      summary: Change flight mode of the aircraft
+      description: >-
+        Set the flight mode of the aircraft to Loiter, Stabilize, Auto, or Guided
+      operationId: api.mode_put
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mode:
+                  type: string
+                  enum: ['loiter', 'stabilize', 'auto', 'guided']
+      responses:
+        "200":
+          description: Operation processed
+        "400":
+          description: Unrecognized mode
+  /invoke:
+    post:
+      tags:
+        - options
+      summary: Invoke as specified in post request
+      description: >-
+        Performs a crucial functionality
+      operationId: api.invoke_post
+      requestBody:
+        content:
+          application/json:
+            schema: 
+              type: object 
+              properties:
+                message:
+                  type: string
+      responses:
+        "200":
+          description: "Important invokation is underway"
 components:
   requestBodies:
     Queue:
